--- a/.eslintrc
+++ b/.eslintrc
@@ -1,5 +1,12 @@
 {
   "rules": {
-    "@typescript-eslint/no-unused-vars": ["warn", { "argsIgnorePattern": "^_" }]
+    "@typescript-eslint/no-unused-vars": [
+  "warn",
+  {
+    "argsIgnorePattern": "^_",
+    "varsIgnorePattern": "^_",
+    "ignoreRestSiblings": true
+  }
+]
   }
 }
